--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ define("BYPASS_SESSION",TRUE);
 include("vendor.php");
 $select = $db->select("needypersondetails","*",array("status"=>"Approve"));
 //varPrint($select);
-include("includes/header.php");
+include("header.php");
 ?>
 			
         	<!-- Start slider area -->
@@ -1010,7 +1010,8 @@ No one is useless in this world who lightens the burdens of another.
                 </div>
             </section>
             <!-- End brand logo area -->
-            <!-- Start footer -->
+            <!-- Start 
+-->
           
 		  
 <?php
