--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ define("BYPASS_SESSION",TRUE);
 include("vendor.php");
 $select = $db->select("needypersondetails","*",array("status"=>"Approve"));
 //varPrint($select);
-include("header.php");
+include("include/header.php");
 ?>
 			
         	<!-- Start slider area -->
